balance-service/kubefiles/deployment-blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: balance-app-blue
  namespace: finance-app
  labels:
    version: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: balance-app
      namespace: finance-app
  template:
    metadata:
      labels:
        app: balance-app
        namespace: finance-app
        version: blue
    spec:
      containers:
        - name: balance-app
          image: welitoncardozo/balance-service:blue
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
