balance-service/kubefiles/deployment-green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: balance-app-green
  namespace: finance-app
  labels:
    version: green
spec:
  replicas: 0
  selector:
    matchLabels:
      app: balance-app
      namespace: finance-app
  template:
    metadata:
      labels:
        app: balance-app
        namespace: finance-app
        version: green
    spec:
      containers:
        - name: balance-app
          image: welitoncardozo/balance-service:green
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
