balance-service/kubefiles/service.yml
apiVersion: v1
kind: Service
metadata:
  name: balance-service
  namespace: finance-app
spec:
  ports:
    - port: 9090
      targetPort: 9090
      protocol: TCP
  type: NodePort
  selector:
    app: balance-app
    namespace: finance-app
