balance-service/kubefiles/blue-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: balance-service-stage-blue
  namespace: finance-app
spec:
  gateways:
    - finance-app-gateway
  hosts:
    - "*"
  http:
    - match:
      - uri:
          prefix: /balance-service
      route:
      - destination:
          host: balance-service
          port:
            number: 9090
          subset: blue
        weight: 70
      - destination:
          host: balance-service
          port:
            number: 9090
          subset: green
        weight: 30
